--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,46 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+	box-sizing: border-box;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+	padding: 0;
+	margin: 0;
+	overflow: hidden;
+}
+header,
+main {
+	display: flex;
+	justify-content: space-between;
+	font-size: 2rem;
+	font-weight: 700;
+	padding: 3.4rem;
+}
+header {
+	align-items: center;
+}
+h1 {
+	font-weight: 900;
+	margin: 0;
+	text-align: center;
+	font-size: 6rem;
+}
+main {
+	text-align: center;
+}
+main img {
+	width: 50%;
+}
+.second {
+	margin-top: 100px;
+	margin-left: 20px;
+}
+header.dark {
+	background-color: #121213;
+	color: orange;
+}
+main.dark {
+	background-color: #121213;
+	color: white;
+}
+main.dark p {
+	color: orange;
 }
